# hbpinn-battery-project

./: .gitignore  README.md  pyproject.toml
examples/: 01_check_nasa_files.py  02_inspect_mat_file.py  03_count_cycle_types.py  04_inspect_discharge_cycle.py  05_extract_first_discharge_table.py  06_plot_first_discharge_curve.py  07_extract_capacity_aging_table.py  08_plot_capacity_aging_curve.py  09_fit_capacity_baseline_model.py  10_fit_capacity_physics_inspired_model.py
src/hbpinn_battery/: __init__.py  data.py
tests/: test_import.py
