[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbpinn-battery"
version = "0.1.0"
description = "Hybrid physics-informed Li-ion battery prognosis package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ruiqi Hu"}
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
